--- a/index.html
+++ b/index.html
@@ -3,71 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Military Logistics Services LLC</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Military Logistics Services</title>
 </head>
 <body>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Military Logistics Services LLC</h1>
-        <p class="slogan">Military-Grade Maintenance for Every Mission</p>
-        <a href="#contact" class="cta-button">Contact Us</a>
-    </section>
+    <!-- Logo Section -->
+    <header>
+        <h1>Military Logistics Services</h1>
+        <img src="logo0.jpg" alt="Main Logo" style="width:200px;">
+    </header>
 
-    <!-- Mission Section -->
-    <section id="mission">
-        <h2>Our Mission</h2>
-        <p>Providing military-grade maintenance and logistics support with unwavering dedication and precision.</p>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services">
-        <h2>Our Services</h2>
-        <ul>
-            <li>Equipment Maintenance</li>
-            <li>Vehicle Logistics</li>
-            <li>Supply Chain Support</li>
-            <li>On-Demand Repairs</li>
-        </ul>
-        <a href="#mission" class="learn-more">Learn More</a>
-    </section>
-
-    <!-- About Us Section -->
-    <section id="about">
-        <h2>About Us</h2>
-        <p>Military Logistics Services LLC is committed to sustainable development and top-tier maintenance solutions.</p>
-    </section>
-
-    <!-- Gallery Section -->
-    <section id="gallery">
-        <h2>Gallery</h2>
-        <div class="gallery-images">
-            <img src="images/truck1.jpg" alt="Military Vehicle 1">
-            <img src="images/truck2.jpg" alt="Military Vehicle 2">
-            <img src="images/maintenance.jpg" alt="Maintenance in Action">
+    <!-- Vehicle Images Section -->
+    <section id="vehicles">
+        <h2>Our Fleet</h2>
+        <div>
+            <img src="truck1.jpg" alt="Truck 1" style="width:200px;">
+            <img src="truck2.jpg" alt="Truck 2" style="width:200px;">
+            <img src="truck2Far.jpg" alt="Truck 2 from Distance" style="width:200px;">
+            <img src="truck3.jpg" alt="Truck 3" style="width:200px;">
+            <img src="truck3F.jpg" alt="Truck 3 Front View" style="width:200px;">
+            <img src="truck3L.jpg" alt="Truck 3 Left View" style="width:200px;">
+            <img src="truck4.jpg" alt="Truck 4" style="width:200px;">
+            <img src="truck4far.jpg" alt="Truck 4 from Distance" style="width:200px;">
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <form action="submit_form.php" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
+    <!-- Maintenance Section -->
+    <section id="maintenance">
+        <h2>Maintenance and Support</h2>
+        <img src="maintenance.jpg" alt="Maintenance" style="width:300px;">
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 Military Logistics Services LLC. All Rights Reserved.</p>
-    </footer>
+    <!-- Logo Gallery Section -->
+    <section id="logos">
+        <h2>Our Brand Logos</h2>
+        <div>
+            <img src="logo.jpg" alt="Logo" style="width:100px;">
+            <img src="logo1.jpg" alt="Logo Variation 1" style="width:100px;">
+            <img src="logo2.jpg" alt="Logo Variation 2" style="width:100px;">
+            <img src="logo3.jpg" alt="Logo Variation 3" style="width:100px;">
+            <img src="logo4.jpg" alt="Logo Variation 4" style="width:100px;">
+            <img src="logo5.jpg" alt="Logo Variation 5" style="width:100px;">
+        </div>
+    </section>
 
-    <script src="script.js"></script>
+    <!-- Facility Interior Section -->
+    <section id="interior">
+        <h2>Inside Our Facilities</h2>
+        <img src="Inside.jpg" alt="Facility Interior" style="width:300px;">
+    </section>
+
 </body>
 </html>
