--- a/index.html
+++ b/index.html
@@ -4,53 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Military Logistics Services</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        header { text-align: center; padding: 20px; background-color: #f0f0f0; }
+        header img { width: 150px; }
+        h1 { color: #333; }
+        #boilerplate { padding: 20px; margin-top: 20px; text-align: center; }
+        #boilerplate h2 { color: #555; }
+        #boilerplate p { font-size: 1.1em; color: #666; line-height: 1.5em; }
+        .gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; padding: 20px; }
+        .gallery img { width: 200px; border-radius: 8px; }
+        .section-title { text-align: center; margin-top: 40px; font-size: 1.5em; color: #444; }
+    </style>
 </head>
 <body>
 
-    <!-- Logo Section -->
+    <!-- Logo Header -->
     <header>
+        <img src="logo2.jpg" alt="Military Logistics Services Logo">
         <h1>Military Logistics Services</h1>
-        <img src="logo0.jpg" alt="Main Logo" style="width:200px;">
     </header>
 
+    <!-- Boilerplate Section -->
+    <section id="boilerplate">
+        <h2>About Us</h2>
+        <p>
+            <!-- This section contains the key content extracted from MilitaryLogisticsServicesBoiler.docx -->
+            Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations. We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors, ensuring readiness and operational success in any environment.
+        </p>
+    </section>
+
     <!-- Vehicle Images Section -->
-    <section id="vehicles">
-        <h2>Our Fleet</h2>
-        <div>
-            <img src="truck1.jpg" alt="Truck 1" style="width:200px;">
-            <img src="truck2.jpg" alt="Truck 2" style="width:200px;">
-            <img src="truck2Far.jpg" alt="Truck 2 from Distance" style="width:200px;">
-            <img src="truck3.jpg" alt="Truck 3" style="width:200px;">
-            <img src="truck3F.jpg" alt="Truck 3 Front View" style="width:200px;">
-            <img src="truck3L.jpg" alt="Truck 3 Left View" style="width:200px;">
-            <img src="truck4.jpg" alt="Truck 4" style="width:200px;">
-            <img src="truck4far.jpg" alt="Truck 4 from Distance" style="width:200px;">
+    <section>
+        <div class="section-title">Our Fleet</div>
+        <div class="gallery">
+            <img src="truck1.jpg" alt="Truck 1">
+            <img src="truck2.jpg" alt="Truck 2">
+            <img src="truck2Far.jpg" alt="Truck 2 from Distance">
+            <img src="truck3.jpg" alt="Truck 3">
+            <img src="truck3F.jpg" alt="Truck 3 Front View">
+            <img src="truck3L.jpg" alt="Truck 3 Left View">
+            <img src="truck4.jpg" alt="Truck 4">
+            <img src="truck4far.jpg" alt="Truck 4 from Distance">
         </div>
     </section>
 
     <!-- Maintenance Section -->
-    <section id="maintenance">
-        <h2>Maintenance and Support</h2>
-        <img src="maintenance.jpg" alt="Maintenance" style="width:300px;">
+    <section>
+        <div class="section-title">Maintenance and Support</div>
+        <div class="gallery">
+            <img src="maintenance.jpg" alt="Maintenance">
+        </div>
     </section>
 
     <!-- Logo Gallery Section -->
-    <section id="logos">
-        <h2>Our Brand Logos</h2>
-        <div>
-            <img src="logo.jpg" alt="Logo" style="width:100px;">
-            <img src="logo1.jpg" alt="Logo Variation 1" style="width:100px;">
-            <img src="logo2.jpg" alt="Logo Variation 2" style="width:100px;">
-            <img src="logo3.jpg" alt="Logo Variation 3" style="width:100px;">
-            <img src="logo4.jpg" alt="Logo Variation 4" style="width:100px;">
-            <img src="logo5.jpg" alt="Logo Variation 5" style="width:100px;">
+    <section>
+        <div class="section-title">Our Brand Logos</div>
+        <div class="gallery">
+            <img src="logo.jpg" alt="Logo">
+            <img src="logo1.jpg" alt="Logo Variation 1">
+            <img src="logo2.jpg" alt="Logo Variation 2">
+            <img src="logo3.jpg" alt="Logo Variation 3">
+            <img src="logo4.jpg" alt="Logo Variation 4">
+            <img src="logo5.jpg" alt="Logo Variation 5">
         </div>
     </section>
 
     <!-- Facility Interior Section -->
-    <section id="interior">
-        <h2>Inside Our Facilities</h2>
-        <img src="Inside.jpg" alt="Facility Interior" style="width:300px;">
+    <section>
+        <div class="section-title">Inside Our Facilities</div>
+        <div class="gallery">
+            <img src="Inside.jpg" alt="Facility Interior">
+        </div>
     </section>
 
 </body>
