--- a/index.html
+++ b/index.html
@@ -4,79 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Military Logistics Services</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-        header { text-align: center; padding: 20px; background-color: #f0f0f0; }
-        header img { width: 150px; }
-        h1 { color: #333; }
-        #boilerplate { padding: 20px; margin-top: 20px; text-align: center; }
-        #boilerplate h2 { color: #555; }
-        #boilerplate p { font-size: 1.1em; color: #666; line-height: 1.5em; }
-        .gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; padding: 20px; }
-        .gallery img { width: 200px; border-radius: 8px; }
-        .section-title { text-align: center; margin-top: 40px; font-size: 1.5em; color: #444; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Night Mode Toggle Button -->
+    <button class="toggle-night-mode" onclick="toggleNightMode()" aria-label="Toggle Night Mode">Toggle Night Mode</button>
 
     <!-- Logo Header -->
     <header>
-        <img src="logo2.jpg" alt="Military Logistics Services Logo">
+        <img src="Images/logo2.jpg" alt="Military Logistics Services Logo" role="img" aria-label="Company Logo">
         <h1>Military Logistics Services</h1>
     </header>
 
     <!-- Boilerplate Section -->
-    <section id="boilerplate">
-        <h2>About Us</h2>
+    <section id="boilerplate" aria-labelledby="about-title">
+        <h2 id="about-title">About Us</h2>
         <p>
-            <!-- This section contains the key content extracted from MilitaryLogisticsServicesBoiler.docx -->
             Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations. We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors, ensuring readiness and operational success in any environment.
         </p>
     </section>
 
-    <!-- Vehicle Images Section -->
-    <section>
-        <div class="section-title">Our Fleet</div>
-        <div class="gallery">
-            <img src="truck1.jpg" alt="Truck 1">
-            <img src="truck2.jpg" alt="Truck 2">
-            <img src="truck2Far.jpg" alt="Truck 2 from Distance">
-            <img src="truck3.jpg" alt="Truck 3">
-            <img src="truck3F.jpg" alt="Truck 3 Front View">
-            <img src="truck3L.jpg" alt="Truck 3 Left View">
-            <img src="truck4.jpg" alt="Truck 4">
-            <img src="truck4far.jpg" alt="Truck 4 from Distance">
+    <!-- Fleet Gallery Section -->
+    <section aria-labelledby="fleet-title">
+        <h2 id="fleet-title" class="section-title">Our Fleet</h2>
+        <div class="gallery" aria-live="polite" aria-label="Fleet Image Gallery">
+            <img src="Images/truck1.jpg" alt="Truck 1 in service">
+            <img src="Images/truck2.jpg" alt="Truck 2 side view">
+            <img src="Images/truck2Far.jpg" alt="Truck 2 distant view">
+            <img src="Images/truck3.jpg" alt="Truck 3 front view">
+            <img src="Images/truck3F.jpg" alt="Truck 3 closer front view">
+            <img src="Images/truck3L.jpg" alt="Truck 3 left side view">
+            <img src="Images/truck4.jpg" alt="Truck 4 parked">
+            <img src="Images/truck4far.jpg" alt="Truck 4 distant view">
         </div>
     </section>
 
     <!-- Maintenance Section -->
-    <section>
-        <div class="section-title">Maintenance and Support</div>
-        <div class="gallery">
-            <img src="maintenance.jpg" alt="Maintenance">
+    <section aria-labelledby="maintenance-title">
+        <h2 id="maintenance-title" class="section-title">Maintenance and Support</h2>
+        <div class="gallery" aria-live="polite">
+            <img src="Images/maintenance.jpg" alt="Maintenance team working on equipment">
         </div>
     </section>
 
     <!-- Logo Gallery Section -->
-    <section>
-        <div class="section-title">Our Brand Logos</div>
-        <div class="gallery">
-            <img src="logo.jpg" alt="Logo">
-            <img src="logo1.jpg" alt="Logo Variation 1">
-            <img src="logo2.jpg" alt="Logo Variation 2">
-            <img src="logo3.jpg" alt="Logo Variation 3">
-            <img src="logo4.jpg" alt="Logo Variation 4">
-            <img src="logo5.jpg" alt="Logo Variation 5">
+    <section aria-labelledby="logo-gallery-title">
+        <h2 id="logo-gallery-title" class="section-title">Our Brand Logos</h2>
+        <div class="gallery" aria-live="polite" aria-label="Company Logo Gallery">
+            <img src="Images/logo.jpg" alt="Official Logo">
+            <img src="Images/logo1.jpg" alt="Logo Variation 1">
+            <img src="Images/logo2.jpg" alt="Logo Variation 2">
+            <img src="Images/logo3.jpg" alt="Logo Variation 3">
+            <img src="Images/logo4.jpg" alt="Logo Variation 4">
+            <img src="Images/logo5.jpg" alt="Logo Variation 5">
         </div>
     </section>
 
-    <!-- Facility Interior Section -->
-    <section>
-        <div class="section-title">Inside Our Facilities</div>
-        <div class="gallery">
-            <img src="Inside.jpg" alt="Facility Interior">
-        </div>
-    </section>
-
+    <script src="script.js"></script>
 </body>
-</html>
+            </html>
