--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Military Logistics Services</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Night Mode Toggle Button -->
@@ -12,7 +12,7 @@
 
     <!-- Logo Header -->
     <header>
-        <img src="Images/logo2.jpg" alt="Military Logistics Services Logo" role="img" aria-label="Company Logo">
+        <img src="logo2.jpg" alt="Military Logistics Services Logo" role="img" aria-label="Company Logo">
         <h1>Military Logistics Services</h1>
     </header>
 
@@ -28,14 +28,14 @@
     <section aria-labelledby="fleet-title">
         <h2 id="fleet-title" class="section-title">Our Fleet</h2>
         <div class="gallery" aria-live="polite" aria-label="Fleet Image Gallery">
-            <img src="Images/truck1.jpg" alt="Truck 1 in service">
-            <img src="Images/truck2.jpg" alt="Truck 2 side view">
-            <img src="Images/truck2Far.jpg" alt="Truck 2 distant view">
-            <img src="Images/truck3.jpg" alt="Truck 3 front view">
-            <img src="Images/truck3F.jpg" alt="Truck 3 closer front view">
-            <img src="Images/truck3L.jpg" alt="Truck 3 left side view">
-            <img src="Images/truck4.jpg" alt="Truck 4 parked">
-            <img src="Images/truck4far.jpg" alt="Truck 4 distant view">
+            <img src="truck1.jpg" alt="Truck 1 in service">
+            <img src="truck2.jpg" alt="Truck 2 side view">
+            <img src="truck2Far.jpg" alt="Truck 2 distant view">
+            <img src="truck3.jpg" alt="Truck 3 front view">
+            <img src="truck3F.jpg" alt="Truck 3 closer front view">
+            <img src="truck3L.jpg" alt="Truck 3 left side view">
+            <img src="truck4.jpg" alt="Truck 4 parked">
+            <img src="truck4far.jpg" alt="Truck 4 distant view">
         </div>
     </section>
 
@@ -43,7 +43,7 @@
     <section aria-labelledby="maintenance-title">
         <h2 id="maintenance-title" class="section-title">Maintenance and Support</h2>
         <div class="gallery" aria-live="polite">
-            <img src="Images/maintenance.jpg" alt="Maintenance team working on equipment">
+            <img src="maintenance.jpg" alt="Maintenance team working on equipment">
         </div>
     </section>
 
@@ -51,12 +51,12 @@
     <section aria-labelledby="logo-gallery-title">
         <h2 id="logo-gallery-title" class="section-title">Our Brand Logos</h2>
         <div class="gallery" aria-live="polite" aria-label="Company Logo Gallery">
-            <img src="Images/logo.jpg" alt="Official Logo">
-            <img src="Images/logo1.jpg" alt="Logo Variation 1">
-            <img src="Images/logo2.jpg" alt="Logo Variation 2">
-            <img src="Images/logo3.jpg" alt="Logo Variation 3">
-            <img src="Images/logo4.jpg" alt="Logo Variation 4">
-            <img src="Images/logo5.jpg" alt="Logo Variation 5">
+            <img src="logo.jpg" alt="Official Logo">
+            <img src="logo1.jpg" alt="Logo Variation 1">
+            <img src="logo2.jpg" alt="Logo Variation 2">
+            <img src="logo3.jpg" alt="Logo Variation 3">
+            <img src="logo4.jpg" alt="Logo Variation 4">
+            <img src="logo5.jpg" alt="Logo Variation 5">
         </div>
     </section>
 
