--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Military Logistics Services</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="#main-content" class="skip-to-content">Skip to Content</a>
@@ -14,7 +14,7 @@
 
     <!-- Logo Header -->
     <header role="banner">
-        <img src="Images/logo2.jpg" alt="Military Logistics Services Logo" role="img" aria-label="Company Logo">
+        <img src="logo2.jpg" alt="Military Logistics Services Logo" role="img" aria-label="Company Logo">
         <h1>Military Logistics Services</h1>
     </header>
 
@@ -33,8 +33,8 @@
         <section aria-labelledby="fleet-title">
             <h2 id="fleet-title" class="section-title">Our Fleet</h2>
             <div class="gallery" aria-live="polite" aria-label="Fleet Image Gallery">
-                <img src="Images/truck1.jpg" alt="Truck 1 in service">
-                <img src="Images/truck2.jpg" alt="Truck 2 side view">
+                <img src="truck1.jpg" alt="Truck 1 in service">
+                <img src="truck2.jpg" alt="Truck 2 side view">
                 <!-- More images... -->
             </div>
         </section>
@@ -43,7 +43,7 @@
         <section aria-labelledby="maintenance-title">
             <h2 id="maintenance-title" class="section-title">Maintenance and Support</h2>
             <div class="gallery" aria-live="polite">
-                <img src="Images/maintenance.jpg" alt="Maintenance team working on equipment">
+                <img src="maintenance.jpg" alt="Maintenance team working on equipment">
             </div>
         </section>
 
@@ -51,8 +51,8 @@
         <section aria-labelledby="logo-gallery-title">
             <h2 id="logo-gallery-title" class="section-title">Our Brand Logos</h2>
             <div class="gallery" aria-live="polite" aria-label="Company Logo Gallery">
-                <img src="Images/logo.jpg" alt="Official Logo">
-                <img src="Images/logo1.jpg" alt="Logo Variation 1">
+                <img src="logo.jpg" alt="Official Logo">
+                <img src="logo1.jpg" alt="Logo Variation 1">
                 <!-- More logos... -->
             </div>
         </section>
