--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </main>
 
     <footer role="contentinfo">
-        <p>&copy; Military Logistics Services. All Rights Reserved.</p>
+        <p>&copy; 2024 Military Logistics Services. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
