--- a/index.html
+++ b/index.html
@@ -8,31 +8,66 @@
 </head>
 <body>
     <a href="#main-content" class="skip-to-content">Skip to Content</a>
-    <button class="toggle-theme" onclick="toggleTheme()" aria-label="Toggle Day/Night Mode">Toggle Theme</button>
 
-    <header>
-        <img src="Images/logo2.jpg" alt="Military Logistics Services Logo">
+    <!-- Night Mode Toggle Button -->
+    <button class="toggle-night-mode" onclick="toggleNightMode()" aria-label="Toggle Night Mode">Toggle Night Mode</button>
+
+    <!-- Logo Header -->
+    <header role="banner">
+        <img src="logo2.jpg" alt="Military Logistics Services Logo" role="img" aria-label="Company Logo">
         <h1>Military Logistics Services</h1>
     </header>
 
-    <main id="main-content">
-        <section id="about">
-            <h2>About Us</h2>
+    <!-- Navigation Links for Page Sections -->
+    <nav role="navigation">
+        <ul>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="fleet.html">Our Fleet</a></li>
+            <li><a href="maintenance.html">Maintenance & Support</a></li>
+            <li><a href="logos.html">Our Brand Logos</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content Area -->
+    <main id="main-content" role="main">
+        <section id="boilerplate" aria-labelledby="about-title">
+            <h2 id="about-title">About Us</h2>
             <p>
-                Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations. Our team is committed to reliable services tailored to meet the demands of military and defense sectors, ensuring operational success in all environments.
+                Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations.
+                We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors.
             </p>
         </section>
 
-        <section id="fleet">
-            <h2>Our Fleet</h2>
-            <div class="gallery">
-                <img src="Images/truck1.jpg" alt="Truck 1 in service">
-                <!-- Additional images as needed -->
+        <!-- Fleet Gallery Section -->
+        <section aria-labelledby="fleet-title">
+            <h2 id="fleet-title" class="section-title">Our Fleet</h2>
+            <div class="gallery" aria-live="polite" aria-label="Fleet Image Gallery">
+                <img src="truck1.jpg" alt="Truck 1 in service">
+                <img src="truck2.jpg" alt="Truck 2 side view">
+                <!-- More images... -->
+            </div>
+        </section>
+
+        <!-- Maintenance Section -->
+        <section aria-labelledby="maintenance-title">
+            <h2 id="maintenance-title" class="section-title">Maintenance and Support</h2>
+            <div class="gallery" aria-live="polite">
+                <img src="maintenance.jpg" alt="Maintenance team working on equipment">
+            </div>
+        </section>
+
+        <!-- Logo Gallery Section -->
+        <section aria-labelledby="logo-gallery-title">
+            <h2 id="logo-gallery-title" class="section-title">Our Brand Logos</h2>
+            <div class="gallery" aria-live="polite" aria-label="Company Logo Gallery">
+                <img src="logo.jpg" alt="Official Logo">
+                <img src="logo1.jpg" alt="Logo Variation 1">
+                <!-- More logos... -->
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer role="contentinfo">
         <p>&copy; 2024 Military Logistics Services. All Rights Reserved.</p>
     </footer>
 
