--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <!-- Night Mode Toggle Button -->
     <button class="toggle-night-mode" onclick="toggleNightMode()" aria-label="Toggle Night Mode">Toggle Night Mode</button>
 
-    <!-- Responsive Header with Smaller Logo -->
+    <!-- Responsive Header with Hamburger Menu -->
     <header role="banner">
         <img src="logo2.jpg" alt="Military Logistics Services Logo" class="logo" role="img" aria-label="Company Logo">
         <h1>Military Logistics Services</h1>
-        
+
         <!-- Hamburger Menu for Mobile View -->
         <nav role="navigation" aria-label="Main Navigation" class="nav-menu">
             <button aria-label="Toggle Navigation Menu" class="hamburger" onclick="toggleMenu()">
@@ -42,33 +42,7 @@
             </p>
         </section>
 
-        <!-- Fleet Gallery Section -->
-        <section aria-labelledby="fleet-title">
-            <h2 id="fleet-title" class="section-title">Our Fleet</h2>
-            <div class="gallery" aria-live="polite" aria-label="Fleet Image Gallery">
-                <img src="truck1.jpg" alt="Truck 1 in service">
-                <img src="truck2.jpg" alt="Truck 2 side view">
-                <!-- More images... -->
-            </div>
-        </section>
-
-        <!-- Maintenance Section -->
-        <section aria-labelledby="maintenance-title">
-            <h2 id="maintenance-title" class="section-title">Maintenance and Support</h2>
-            <div class="gallery" aria-live="polite">
-                <img src="maintenance.jpg" alt="Maintenance team working on equipment">
-            </div>
-        </section>
-
-        <!-- Logo Gallery Section -->
-        <section aria-labelledby="logo-gallery-title">
-            <h2 id="logo-gallery-title" class="section-title">Our Brand Logos</h2>
-            <div class="gallery" aria-live="polite" aria-label="Company Logo Gallery">
-                <img src="logo.jpg" alt="Official Logo">
-                <img src="logo1.jpg" alt="Logo Variation 1">
-                <!-- More logos... -->
-            </div>
-        </section>
+        <!-- More sections (fleet, maintenance, logos) here -->
     </main>
 
     <footer role="contentinfo">
