--- a/index.html
+++ b/index.html
@@ -31,18 +31,8 @@
         </nav>
     </header>
 
-    <!-- Main Content Area -->
     <main id="main-content" role="main">
-        <!-- Boilerplate Section -->
-        <section id="boilerplate" aria-labelledby="about-title">
-            <h2 id="about-title">About Us</h2>
-            <p>
-                Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations.
-                We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors.
-            </p>
-        </section>
-
-        <!-- More sections (fleet, maintenance, logos) here -->
+        <!-- Content here -->
     </main>
 
     <footer role="contentinfo">
