--- a/fleet.html
+++ b/fleet.html
@@ -27,6 +27,7 @@
 <footer>
     <p>&copy; 2024 Military Logistics Services. All Rights Reserved.</p>
 </footer>
-
+<script src="script.js">
+</script>
 </body>
 </html>
