--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 &#9776;
             </button>
             <div class="nav-links" id="navLinks">
+                <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="fleet.html">Our Fleet</a>
                 <a href="maintenance.html">Maintenance & Support</a>
