--- a/maintenance.html
+++ b/maintenance.html
@@ -3,29 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maintenance and Support - Military Logistics Services</title>
+    <title>Maintenance & Support - Military Logistics Services</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="#main-content" class="skip-to-content">Skip to Content</a>
 
-<header>
-    <h1>Maintenance and Support</h1>
-    <a href="index.html">Back to Home</a>
-</header>
+    <!-- Night Mode Toggle Button -->
+    <button class="toggle-night-mode" onclick="toggleNightMode()" aria-label="Toggle Night Mode">Toggle Night Mode</button>
 
-<main>
-    <section>
-        <h2>Our Maintenance Team</h2>
-        <div class="gallery">
-            <img src="maintenance.jpg" alt="Maintenance team working on equipment">
-        </div>
-    </section>
-</main>
+    <!-- Responsive Header with Hamburger Menu -->
+    <header role="banner">
+        <img src="logo2.jpg" alt="Military Logistics Services Logo" class="logo" role="img" aria-label="Company Logo">
+        <h1>Military Logistics Services</h1>
 
-<footer>
-    <p>&copy; 2024 Military Logistics Services. All Rights Reserved.</p>
-</footer>
-<script src="script.js">
-</script>
+        <!-- Hamburger Menu for Mobile View -->
+        <nav role="navigation" aria-label="Main Navigation" class="nav-menu">
+            <button aria-label="Toggle Navigation Menu" class="hamburger" onclick="toggleMenu()">
+                &#9776;
+            </button>
+            <div class="nav-links" id="navLinks">
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="fleet.html">Our Fleet</a>
+                <a href="maintenance.html">Maintenance & Support</a>
+                <a href="logos.html">Our Brand Logos</a>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Main Content Area -->
+    <main id="main-content" role="main">
+        <section id="maintenance" aria-labelledby="maintenance-title">
+            <h2 id="maintenance-title">Maintenance & Support</h2>
+            <p>Details about our maintenance and support services.</p>
+        </section>
+    </main>
+
+    <footer role="contentinfo">
+        <p>&copy; 2024 Military Logistics Services. All Rights Reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
