--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
             <h2 id="about-title">About Us</h2>
             <p>
                 Military Logistics Services provides end-to-end solutions for efficient and secure transportation, supply, and support operations.
-                We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors.
+              <br>  We are committed to delivering reliable logistics services tailored to meet the unique demands of military and defense sectors.
+              <br> At Military Logistics Services LLC (MLS), we deliver military-grade logistics and maintenance solutions, tailored for the rigorous demands of defense operations.
+              <br>   With Cosmic Industries as our dedicated civilian and military tech services branch, we extend our mission beyond traditional logistics—offering expertise in automotive technology, 
+                HVAC services, cybersecurity, and computer repair. Built on a foundation of service excellence, MLS and Cosmic Industries are committed to supporting veterans, active-duty personnel,
+                and civilians with unmatched reliability and a community-first approach. 
+              <br>  Whether for mission-critical needs or everyday support, we bring military standards to every project, 
+                ensuring secure, efficient, and skilled solutions for all.
+
             </p>
         </section>
 
@@ -47,7 +54,7 @@
     </main>
 
     <footer role="contentinfo">
-        <p>&copy; 2024 Military Logistics Services. All Rights Reserved.</p>
+        <p>&copy; 2024 Military Logistics Services. All Rights Reserved∆.</p>
     </footer>
 
     <script src="script.js"></script>
