--- a/about.html
+++ b/about.html
@@ -40,10 +40,10 @@
               
   <br> 
 Founded to bring military-grade logistics to the defense sector, Military Logistics Services (MLS) has always been driven by a commitment to reliability, efficiency, and precision. 
-     <br>              Our specialized focus on transportation, supply, and operational support has earned us a reputation for delivering secure, end-to-end solutions that stand up to the toughest demands.
-                  <br> Recognizing the unique needs of both military and civilian communities, we expanded with Cosmic Industries as a dedicated branch, widening our service scope to include automotive maintenance, HVAC,     cybersecurity, and computer repair. 
-                  <br> Designed to bridge military expertise with community engagement, Cosmic Industries offers veteran-focused services alongside high-quality civilian support.
-  <br> 
+     <br>   <br>              Our specialized focus on transportation, supply, and operational support has earned us a reputation for delivering secure, end-to-end solutions that stand up to the toughest demands.
+              <br>       <br> Recognizing the unique needs of both military and civilian communities, we expanded with Cosmic Industries as a dedicated branch, widening our service scope to include automotive maintenance, HVAC,     cybersecurity, and computer repair. 
+             <br>        <br> Designed to bridge military expertise with community engagement, Cosmic Industries offers veteran-focused services alongside high-quality civilian support.
+   <br>  <br> 
 As a veteran-centered entity, we actively recruit skilled veterans to lead our service areas, honoring the skills and dedication they bring. We remain committed to our core values of Integrity, Respect, Service Excellence, and Community Focus—upholding military-grade standards in every service we provide. Whether you’re a military family, a veteran, or a civilian seeking trusted support, MLS and Cosmic Industries are here to serve your needs with precision and care.
             </p>
         </section>
