--- a/about.html
+++ b/about.html
@@ -36,11 +36,11 @@
     <main id="main-content" role="main">
         <section id="about" aria-labelledby="about-title">
             <h2 id="about-title">Our Story</h2>
-            <p>
+            <p>  <br> 
               
   
 Founded to bring military-grade logistics to the defense sector, Military Logistics Services (MLS) has always been driven by a commitment to reliability, efficiency, and precision. 
-     <br>   <br>              Our specialized focus on transportation, supply, and operational support has earned us a reputation for delivering secure, end-to-end solutions that stand up to the toughest demands.
+     <br>            Our specialized focus on transportation, supply, and operational support has earned us a reputation for delivering secure, end-to-end solutions that stand up to the toughest demands.
               <br>       <br> Recognizing the unique needs of both military and civilian communities, we expanded with Cosmic Industries as a dedicated branch, widening our service scope to include automotive maintenance, HVAC,     cybersecurity, and computer repair. 
              <br>        <br> Designed to bridge military expertise with community engagement, Cosmic Industries offers veteran-focused services alongside high-quality civilian support.
    <br>  <br> 
