--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <footer role="contentinfo">
         <p>&copy; 2024 Military Logistics Services. All Rights Reserved∆.
-          <br> <br>  &nbsp; &nbsp;Military-Grade Maintenance for Every Mission
+          <br> <hr><br>  &nbsp; &nbsp;Military-Grade Maintenance for Every Mission
               </p>
     </footer>
 
