--- a/about.html
+++ b/about.html
@@ -49,8 +49,10 @@ As a veteran-centered entity, we actively recruit skilled veterans to lead our s
         </section>
     </main>
 
-    <footer role="contentinfo">
-        <p>&copy; 2024 Military Logistics Services. All Rights Reserved.</p>
+      <footer role="contentinfo">
+        <p>&copy; 2024 Military Logistics Services. All Rights Reserved∆.
+          <br> <hr>  &nbsp; &nbsp;Military-Grade Maintenance for Every Mission
+              </p>
     </footer>
 
     <script src="script.js"></script>
