--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@ As a veteran-centered entity, we actively recruit skilled veterans to lead our s
 
       <footer role="contentinfo">
         <p>&copy; 2024 Military Logistics Services. All Rights Reserved∆.
-          <br> <hr>  &nbsp; &nbsp;Military-Grade Maintenance for Every Mission
+          <br> <hr>  &nbsp; &nbsp;Military-Grade Maintenance <br>for Every Mission
               </p>
     </footer>
 
