--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <!-- Responsive Header with Hamburger Menu -->
     <header role="banner">
         <img src="logo2.jpg" alt="Military Logistics Services Logo" class="logo" role="img" aria-label="Company Logo">
-        <h1>Military Logistics Services</h1>
+        <h1><em>Military Logistics Services</em></h1>
 
         <!-- Hamburger Menu for Mobile View -->
         <nav role="navigation" aria-label="Main Navigation" class="nav-menu">
@@ -43,9 +43,10 @@ Founded to bring military-grade logistics to the defense sector, Military Logist
      <br>          &nbsp;   Our specialized focus on transportation, supply, and operational support has earned us a reputation for delivering secure, end-to-end solutions that stand up to the toughest demands.
               <br>       <br> &thinsp; Recognizing the unique needs of both military and civilian communities, we expanded with Cosmic Industries as a dedicated branch, widening our service scope to include automotive maintenance, HVAC,     cybersecurity, and computer repair. 
              <br>        <br> &thinsp;Designed to bridge military expertise with community engagement, Cosmic Industries offers veteran-focused services alongside high-quality civilian support.
-   <br>  <br>  &nbsp;
-As a veteran-centered entity, we actively recruit skilled veterans to lead our service areas, honoring the skills and dedication they bring.  <br>   <br>  &thinsp;We remain committed to our core values of Integrity, Respect, Service Excellence, and Community Focus—upholding military-grade standards in every service we provide.  <br>   <br> &thinsp; Whether you’re a military family, a veteran, or a civilian seeking trusted support, MLS and Cosmic Industries are here to serve your needs with precision and care.
-            </p>
+   <br>  <br>  &nbsp; 
+As a veteran-centered entity, we actively recruit skilled veterans to lead our service areas, honoring the skills and dedication they bring.  <br>   <br>  &thinsp;We remain committed to our core values of Integrity, Respect, Service Excellence, and Community Focus—upholding military-grade standards in every service we provide.  
+                <br>   <br> &thinsp; <i> Whether you’re a military family, a veteran, or a civilian seeking trusted support, MLS and Cosmic Industries are here to serve your needs with precision and care.
+    </i>  </p>
         </section>
     </main>
 
